# yaz

./: .gitignore  CONTRIBUTING.md  LICENSE  PACKAGING.md  README.md  build_deb.sh  install.sh  pyproject.toml  yaz  yaz.desktop.in  yaz.py  yaz_canvas.py  yaz_countdown.py  yaz_mw_capture.py  yaz_mw_chrome.py  yaz_mw_dialogs.py  yaz_mw_shortcuts.py  yaz_picker.py
debian/: changelog  control  copyright  rules
debian/source/: options
snap/: snapcraft.yaml
src/: yaz_app.py  yaz_mainwindow.py  yaz_settings.py
src/capture/: yaz_capture.py
src/mixins/: yaz_mw_drawing.py  yaz_mw_fileio.py
src/ui/: yaz_preferences.py  yaz_welcome.py
