[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yaz-screenshot"
version = "0.1.0"
description = "Wayland-native screenshot and annotation tool for Linux."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Yetesfa Alemayehu" }]
requires-python = ">=3.10"
keywords = ["screenshot", "wayland", "annotation", "gnome", "ubuntu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
]
dependencies = [
    "PyQt6>=6.5",
]

[project.urls]
Homepage = "https://github.com/yetesfa/yaz"
Author   = "https://www.linkedin.com/in/yetesfa-alemayehu"
Issues   = "https://github.com/yetesfa/yaz/issues"

[project.scripts]
yaz = "yaz:main"

[tool.setuptools]
py-modules = ["yaz"]
